Improve all forms

--- a/templates/forms/create_artist.html
+++ b/templates/forms/create_artist.html
@@ -8,7 +8,7 @@
   <div style="margin-top: 5px; margin-bottom: 10px;">
     <div>
       <h3 style="text-align: left; margin-bottom: 30px;">
-        CREATE A NEW ARTIST
+        ARTIST FORM
       </h3>
     </div>
     <form action="" method="POST">
@@ -109,7 +109,7 @@
       <div class="form-group">
         <input
           type="submit"
-          value="Create Artist"
+          value="Create a new artist"
           class="btn btn-primary btn-lg btn-block"
         />
       </div>
