--- a/templates/forms/create_show.html
+++ b/templates/forms/create_show.html
@@ -15,7 +15,9 @@
       <form action="" method="POST">
         {{ form.hidden_tag() }}
         <div class="form-group" style="text-align: left;">
-          <small class="text-warning">Artists IDs can be found in their profile pages</small>
+          <label>Artist ID <span class="text-danger">*</span> </label>
+          <span style="display:inline-block; width:5px;"></span>
+          <small class="text-warning">found in the artist's profile page</small>
           {% if 'artist_id' in form.errors %}
           {{ form.artist_id(class_='form-control is-invalid', placeholder="artist id", autofocus=true) }}
           <div class="invalid-feedback" style="text-align: left;">
@@ -26,7 +28,9 @@
           {% endif %}
         </div>
         <div class="form-group" style="text-align: left;">
-          <small class="text-warning">Venues IDs can be found in their profile pages</small>
+          <label>Venue ID <span class="text-danger">*</span> </label>
+          <span style="display:inline-block; width:5px;"></span>
+          <small class="text-warning">found in the venue's profile page</small>
           {% if 'venue_id' in form.errors %}
           {{ form.venue_id(class_='form-control is-invalid', placeholder="venue id", autofocus=true) }}
           <div class="invalid-feedback" style="text-align: left;">
@@ -37,7 +41,9 @@
           {% endif %}
         </div>
         <div class="form-group" style="text-align: left;">
-          <small class="text-warning">time format YYYY-MM-DD HH:MM:SS</small>
+          <label>Starting time <span class="text-danger">*</span> </label>
+          <span style="display:inline-block; width:5px;"></span>
+          <small class="text-warning">YYYY-MM-DD HH:MM:SS</small>
           {% if 'start_time' in form.errors %}
           {{ form.start_time(class_='form-control is-invalid', placeholder="start time", autofocus=true) }}
           <div class="invalid-feedback" style="text-align: left;">
