--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         </h6>
       </div>
       <div class="row">
-        <div class="col-10">
+        <div class="col-12">
           <div class="row">
             <!-- Find -->
             <div class="col-6">
@@ -51,6 +51,22 @@
                 Post a venue
               </a>
             </div>
+          </div>
+        </div>
+        <div class="text-dark col-12" style="margin-top: 50px;">
+          <h6>See who recently joined our platform</h6>
+          <div class="row">
+            <!-- Recently created -->
+            <div class="col-6"><a href="/artists?filter=recent&cpp=5" class="btn btn-warning" style="margin: 5px;">Recent artists</a></div>
+            <div class="col-6"><a href="/venues?filter=recent&cpp=5" class="btn btn-primary" style="margin: 5px;">Recent venues</a></div>
+          </div>
+        </div>
+        <div class="text-dark col-12" style="margin-top: 50px;">
+          <h6>See our top performers</h6>
+          <div class="row">
+            <!-- Top -->
+            <div class="col-6"><a href="/artists?filter=top&cpp=5" class="btn btn-warning" style="margin: 5px;">Top artists</a></div>
+            <div class="col-6"><a href="/venues?filter=top&cpp=5" class="btn btn-primary" style="margin: 5px;">Top venues</a></div>
           </div>
         </div>
       </div>
