--- a/templates/shows.html
+++ b/templates/shows.html
@@ -2,7 +2,7 @@
 'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name': 'Shows', 'class':
 'text-primary', 'link': '/shows'} ]%}
 {% extends 'layouts/main.html' %}
-{% block title %}Shows{% endblock %}
+{% block title %}Fyyur|Shows{% endblock %}
 {% block content %}
 <div class="container py-4">
   <div class="mid py-4">
