--- a/templates/venues.html
+++ b/templates/venues.html
@@ -2,7 +2,7 @@
 '/venues'}, { 'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name':
 'Shows', 'class': '', 'link': '/shows'} ]%}
 {% extends 'layouts/main.html' %} 
-{% block title %}Venues{% endblock %}
+{% block title %}Fyyur|Venues{% endblock %}
 {% block content %}
 <div class="container">
   <div class="mid">
