--- a/templates/artist.html
+++ b/templates/artist.html
@@ -2,7 +2,7 @@
 'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name': 'Shows', 'class':
 '', 'link': '/shows'} ] %}
 {% extends 'layouts/main.html' %}
-{% block title %}{{ data.artist.name }}{% endblock %}
+{% block title %}Fyyur|{{ data.artist.name }}{% endblock %}
 {% block styles %} {% endblock %}
 {% block content %}
 <div class="container">
