--- a/templates/artists.html
+++ b/templates/artists.html
@@ -2,7 +2,7 @@
 'name': 'Artists', 'class': 'text-primary', 'link': '/artists'}, { 'name':
 'Shows', 'class': '', 'link': '/shows'} ] %}
 {% extends 'layouts/main.html' %}
-{% block title %}Artists{% endblock %}
+{% block title %}Fyyur|Artists{% endblock %}
 {% block content %}
 <div class="container">
   <div class="mid">
