--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -4,7 +4,7 @@
     { 'name': 'Shows', 'class': '', 'link': '/shows'}
 ]%}
 {% extends 'layouts/main.html' %}
-{% block title %}Fyyur{% endblock %}
+{% block title %}Fyyur|500{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <div class="mid">
