--- a/templates/forms/create_artist.html
+++ b/templates/forms/create_artist.html
@@ -2,7 +2,7 @@
 'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name': 'Shows', 'class':
 '', 'link': '/shows'} ] %}
 {% extends 'layouts/main.html' %}
-{% block title %}Create Artist{% endblock %}
+{% block title %}Fyyur|Create Artist{% endblock %}
 {% block content %}
 <div class="container">
   <div style="margin-top: 5px; margin-bottom: 10px;">
