--- a/templates/venue.html
+++ b/templates/venue.html
@@ -2,7 +2,7 @@
   'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name': 'Shows', 'class':
   '', 'link': '/shows'} ] %}
   {% extends 'layouts/main.html' %}
-  {% block title %}{{ data.venue.name }}{% endblock %}
+  {% block title %}Fyyur|{{ data.venue.name }}{% endblock %}
   {% block styles %} {% endblock %}
   {% block content %}
   <div class="container">
